Updated Eyes and Index
Made eye tracking better. Added a link between eyes and home. Added an avoidant button in eyes. Added a toggle for lights on eyes. Added an image and wrap on index as well as a jiggle on the header.

--- a/home.css
+++ b/home.css
@@ -94,3 +94,11 @@ tr {
     border: 1px solid black;
     width: 100%;
 }
+
+#lights{
+    position: absolute;
+    left: 1%;
+    top: 3%;
+    border-radius: 2px;
+    border: 2px solid white;
+}
