Updates and intros
--Changed Lorem Ipsum to something else, but I still can't be serious since I'm so bad at talking about myself

--Changed picture to a regrettable one of myself as drunk trashy gandalf

--Changed the font size and style to better fit the page

--Added image grid for skills page

--Added github link on projects and contact me page

--Added transition delay on click me button to make it smoother

--Added footer to all pages begging for money that I will link to paypal probably

--- a/home.css
+++ b/home.css
@@ -46,6 +46,9 @@ table{
 
 #ipsum {
     z-index: 1;
+    font-size: larger;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-right: 3%;
 }
 
 th{
@@ -106,3 +109,11 @@ tr {
     border-radius: 2px;
     border: 2px solid white;
 }
+
+footer {
+    background-color: #FFF;
+    position:fixed;
+    bottom: 0px;
+    width: 100%;
+    text-align: center;
+    }
