--- a/index.css
+++ b/index.css
@@ -71,13 +71,16 @@ table{
 }
 
 #ipsum {
+    font-size: larger;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     visibility: hidden;
     animation: slidedown 1.5s ease-out 1.5s forwards;
     z-index: 1;
+    margin-right: 3%;
 }
 
 @keyframes slidedown {
-    0% {transform: translate(0px, -100%); visibility: hidden;}
+    0% {transform: translate(0px, -400%); visibility: hidden;}
     100% {transform: translate(0px, 0%); visibility: visible;}
     
 }
@@ -136,3 +139,18 @@ tr {
     border-radius: 2px;
     border: 2px solid white;
 }
+
+footer {
+    background-color: #FFF;
+    position:fixed;
+    bottom: 0px;
+    width: 100%;
+    text-align: center;
+    animation: slide-up 1s ease-out 2s forwards;
+    visibility: hidden;
+    }
+
+    @keyframes slide-up{
+        0% {transform: translate(0px, 400%); visibility: hidden;}
+        100% {transform: translate(0px, 0%); visibility: visible;}
+    }
